--- a/agency-service/agency-service-for-all/src/app/components/footer/footer.component.html
+++ b/agency-service/agency-service-for-all/src/app/components/footer/footer.component.html
@@ -10,7 +10,7 @@
                 <polyline points="9 22 9 12 15 12 15 22"></polyline>
               </svg>
             </div>
-            <span>Agency Connect</span>
+            <span>{{websiteName}}</span>
           </div>
           <p class="footer-tagline">Connecting businesses with top agencies worldwide</p>
           <div class="newsletter">
@@ -59,7 +59,7 @@
   
   <div class="footer-bottom">
     <div class="container">
-      <p>&copy; {{currentYear}} Agency Connect. All rights reserved.</p>
+      <p>&copy; {{currentYear}} {{websiteName}}. All rights reserved.</p>
       <div class="social-links">
         <a href="#" aria-label="Facebook">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
