--- a/agency-service/agency-service-for-all/src/app/components/header/header.component.css
+++ b/agency-service/agency-service-for-all/src/app/components/header/header.component.css
@@ -160,12 +160,12 @@
 
 .btn-outline {
   background: transparent;
-  border: 1px solid white;
-  color: white;
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
 }
 
 .btn-outline:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(79, 70, 229, 0.05);
 }
 
 .btn-block {
